--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,32 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
-jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+orbs:
+  aws-cli: circleci/aws-cli@2.0.6
+  ansible-playbook: orbss/ansible-playbook@0.0.5
+
+jobs: 
+  aws-cli:
+    executor: aws-cli/default
+    environment:
+      STACK_NAME: sample-stack
+      TEMPLATE_FILE: CFn_template/service.yml
     steps:
       - checkout
+      - aws-cli/setup
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-workflows:
-  say-hello-workflow:
-    jobs:
-      - say-hello
+          name: Excute Create/Update Stack
+          command: |
+            set +e  
+            aws cloudformation list-stacks --stack-status-filter CREATE_COMPLETE | grep $STACK_NAME
+            if [ $? -eq 0 ]; then
+              aws cloudformation update-stack --stack-name $STACK_NAME --template-body file://$TEMPLATE_FILE
+              if [ $? -eq 255 ]; then
+                exit 0
+              elif [ $? -eq 0 ]; then
+                aws cloudformation wait stack-update-complete --stack-name $STACK_NAME
+              fi
+            else
+              aws cloudformation create-stack --stack-name $STACK_NAME --template-body file://$TEMPLATE_FILE
+              aws cloudformation wait stack-create-complete --stack-name $STACK_NAME
+            fi
+ 
