Modification of conditional branching

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,37 +1,39 @@
 version: 2.1
 
-
 orbs:
   aws-cli: circleci/aws-cli@2.0.6
   ansible-playbook: orbss/ansible-playbook@0.0.5
 
 jobs: 
-  aws-cli:
+  cloudformation-execute:
     executor: aws-cli/default
     environment:
       STACK_NAME: sample-stack
       TEMPLATE_FILE: CFn_template/service.yml
     steps:
       - checkout
-      - aws-cli/setup
+      - aws-cli/setup:
+          aws-access-key-id: AWS_ACCESS_KEY_ID
+          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+          aws-region: AWS_DEFAULT_REGION
       - run:
           name: Excute Create/Update Stack
           command: |
             set +e  
-            aws cloudformation list-stacks --stack-status-filter CREATE_COMPLETE | grep $STACK_NAME
-            if [ $? -eq 0 ]; then
-              aws cloudformation update-stack --stack-name $STACK_NAME --template-body file://$TEMPLATE_FILE
-              if [ $? -eq 255 ]; then
-                exit 0
-              elif [ $? -eq 0 ]; then
-                aws cloudformation wait stack-update-complete --stack-name $STACK_NAME
-              fi
-            else
-              aws cloudformation create-stack --stack-name $STACK_NAME --template-body file://$TEMPLATE_FILE
+            aws cloudformation list-stacks --stack-status-filter CREATE_COMPLETE | grep $STACK_NAME ]; then
+            if [ $? -ne 0]; then    
+              aws cloudformation create-stack --stack-name $STACK_NAME --region ap-northeast-1 --template-body $TEMPLATE_FILE
               aws cloudformation wait stack-create-complete --stack-name $STACK_NAME
+            else 
+              aws cloudformation update-stack --stack-name $STACK_NAME --region ap-northeast-1 --template-body $TEMPLATE_FILE
+              if [ $? -ne 0]; then
+                exit 0 
+              elif [ $? -eq 0] 
+                aws cloudformation wait stack-create-complete --stack-name $STACK_NAME
+              fi
             fi
             
 workflows:
   sample-workflow:
     jobs:
-      - aws-cli
+      - cloudformation-execute
