--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
             aws cloudformation list-stacks --stack-status-filter CREATE_COMPLETE | grep $STACK_NAME
             if [ $? -eq 0 ]; then
               aws cloudformation update-stack --stack-name $STACK_NAME --template-body file://$TEMPLATE_FILE
-              if [ $? -eq 255 ]; then
+              if [ $? -ne 0 ]; then
                 exit 0
               elif [ $? -eq 0 ]; then
                 aws cloudformation wait stack-update-complete --stack-name $STACK_NAME
