--- a/CFn_template/service.yml
+++ b/CFn_template/service.yml
@@ -161,7 +161,7 @@ Resources:
     Properties:  
       ImageId : !Ref LatestAmiId
       InstanceType: "t2.micro"
-      KeyName: mykey.pem
+      KeyName: mykey
       NetworkInterfaces: 
         - AssociatePublicIpAddress: 'true'
           DeviceIndex: "0"
@@ -181,6 +181,6 @@ Resources:
       UserData:
         Fn::Base64: |
             sudo yum -y update
-            sudo yum localinstall -y https://dev.mysql.com/get/mysql80-community-release-el7-2.noarch.rpm   
+            sudo yum localinstall -y https://dev.mysql.com/get/mysql80-community-release-el8-2.noarch.rpm   
             sudo yum install -y mysql-community-server   
 
