--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,25 @@ jobs:
               aws cloudformation wait stack-create-complete --stack-name $STACK_NAME
             fi
             
+ansible-execute:
+  executor: ansible-playbook/default
+  steps:
+    - checkout
+    - add_ssh_keys:
+        fingerprints:
+          - "28:b8:76:c9:49:07:76:4e:d2:15:90:76:e6:ae:08:ea"
+    - ansible-playbook/install:
+        version: "2.9.23"
+    - ansible-playbook/playbook:
+        inventory: ANSIBLE_INVENTORY # circleciの環境変数で指定。
+        playbook: ansible/playbook.yml　
+        playbook-options: -u ec2-user --private-key ~/.ssh/mykey.pem            
+            
+            
 workflows:
   sample-workflow:
     jobs:
       - cloudformation-execute
+      - ansible-execute:
+          requires:
+            - "cloudformation-execute"
