--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ jobs:
               aws cloudformation create-stack --stack-name $STACK_NAME --template-body file://$TEMPLATE_FILE
               aws cloudformation wait stack-create-complete --stack-name $STACK_NAME
             fi
+          no_output_timeout: 20m  
             
   ansible-execute:
     executor: ansible-playbook/default
