--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,16 +26,14 @@ jobs:
     executor: ansible-playbook/default
     steps:
       - checkout
-      - add_ssh_keys:
-          fingerprints:
-            - "28:b8:76:c9:49:07:76:4e:d2:15:90:76:e6:ae:08:ea"
       - ansible-playbook/install:
           version: "2.9.23"
       - ansible-playbook/playbook:
-          inventory: ANSIBLE_INVENTORY # base64形式でcircleciの環境変数にpathを登録。
+          inventory: "ANSIBLE_INVENTORY" 
           playbook: "ansible/playbook.yml"　
-          playbook-options: -u ec2-user --private-key ~/.ssh/mykey.pem    
-  
+          playbook-options: "-u ec2-user" 
+          private-key: "AWS_SECRET_ACCESS_KEY"
+          
   serverspec-execute:
     executor: ruby/default
     steps:
@@ -53,10 +51,9 @@ jobs:
           name: "Execute serverspec"
           command: |
             rspec  
+            
   
-            
-            
-workflows:
+  workflows:
   sample-workflow:
     jobs:
       - cloudformation-execute
