--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
       - ansible-playbook/playbook:
           inventory: "ANSIBLE_INVENTORY"
           playbook: "ansible/playbook.yml"
-          playbook-options: "-u ec2-user --private-key ~/.ssh/mykey.pem"
+          playbook-options: "-u ec2-user"
           
   serverspec-execute:
     executor: ruby/default
